polyfills description added

--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
 			supported and therefore returns undefined we can enter an else condition
 			where we can provide some fallback code.
 		</p>
+		<h3>Polyfills</h3>
+		<p>
+			Polyfills allows us to add a feature to a browser thag doesnt typically
+			support it through JavaScript. These are typically 3rd party packages that
+			implement a feature in JavaScript code using supported methods to achieve
+			the same type of functuonality for the unsupported broswers.
+		</p>
 	</body>
 </html>
