transpilation description and build config added

--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
 			implement a feature in JavaScript code using supported methods to achieve
 			the same type of functuonality for the unsupported broswers.
 		</p>
+		<h3>Transpilation</h3>
+		<p>
+			Transpilation allows us to write modern JavaScript code in development and
+			then when it comes time to build our app for production the code is
+			transpiled to support older broswers transforming these modern syntax
+			features and methods into older JavaScript code that all browsers support
+			e.g. const and let become var. Transpilation is done using a tool as part
+			of your workflow that can run the transpilation on production builds. Such
+			a tool is Babel wich is the most popualr transpilation tool for
+			JavaScriopt code.
+		</p>
 	</body>
 </html>
